# subsidiesdotio

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
agent/: agent_baseline_vindsubsidy.py
agent/prompts/: prompts.py
agent/retrievers/: retriever_baseline.py
agent/tools/: subsidy_report_parameters.py  tool_query_subsidies.py  utils.py
embed/: embed_subsidies_vindsub.py
sandbox/: fix_bijdrage.py  handle_docx.py  process_embeddings.py  process_subsidies.py  process_subsidies_advanced.py  rvo_scraper.py  vsubsidy_md_parser.py
src/agent/retrievers/: retriever_baseline.py
src/agent/tools/: tool_query_subsidies.py  utils.py
src/embed/: embed_subsidies_vindsub.py
src/ui/: retriever_dashboard_baseline.py  retriever_dashboard_baseline_flask.py
ui/: retriever_dashboard_baseline.py  retriever_dashboard_baseline_flask.py
